# tailscale-svc-lb

./: Dockerfile  LICENSE  Makefile  README.md  index.yaml  pyproject.toml
.github/workflows/: docker-controller.yaml  helm-lint.yaml  helm-release.yaml
charts/tailscale-svc-lb/: Chart.yaml  values.yaml
charts/tailscale-svc-lb/templates/: secret.yaml
runtime/: Dockerfile  entry.sh  stop.sh
src/tailscale_svc_lb_controller/: config.py
src/tailscale_svc_lb_controller/examples/: service.yaml
src/tailscale_svc_lb_controller/resources/: base.py  secret.py
